Fix page view on small devices

--- a/css/main.css
+++ b/css/main.css
@@ -6,14 +6,7 @@ p,a{font-size:1.6rem}
 a{text-decoration:none}
 a:hover{transition:all .3s ease-in-out}
 .section-title{margin-bottom:4.5rem;font-size:4rem;text-transform:uppercase}
-.main-navigation{display:flex;justify-content:center}
-.main-navigation a{font-size:3rem;display:flex;flex-direction:column;justify-content:center;color:#fff;width:30rem;height:5rem;margin:1.6rem 1.6rem;transition:all ease .2s}
-.main-navigation a i{transition:all ease-in-out .2s}
-.main-navigation a:hover{transform:scale(1.1) translateY(-2px)}
-.main-navigation a:hover .fa-twitter{color:#00acee}
-.main-navigations a:hover .fa-instagram{color:#c13584}
-.main-navigation a:hover .fa-linkedin{color:#4875b4}
-.main-navigation a:hover .fa-codepen{color:#212121}
+.main-navigation a{font-size:3rem;display:list-item;flex-direction:column;justify-content:center;color:#fff;width:30rem;height:5rem;margin:1.6rem 1.6rem;transition:all ease .2s}
 @media(max-width: 37.5em){.section-title{font-size:2.8rem}}
 .dark-blue-color{color:#272341}
 .text-color-main{margin-left:1rem;color:#5b86e5;-webkit-text-fill-color:#5b86e5}
@@ -53,8 +46,6 @@ a:hover{transition:all .3s ease-in-out}
 .social-links a{font-size:3rem;display:flex;flex-direction:column;justify-content:center;color:#fff;width:5rem;height:5rem;margin:1.6rem 1.6rem;transition:all ease .2s}
 .social-links a i{transition:all ease-in-out .2s}
 .social-links a:hover{transform:scale(1.1) translateY(-2px)}
-.social-links a:hover .fa-twitter{color:#00acee}
-.social-links a:hover .fa-instagram{color:#c13584}
 .social-links a:hover .fa-linkedin{color:#4875b4}
 .social-links a:hover .fa-codepen{color:#212121}
 .back-to-top i{color:#fff;margin:1rem 0 1.6rem;transition:all 200ms ease}
